
  - (scm_return_value): Removed

  - Change the low-level port API to fix the design error about error handling
    (get_byte() and peek_byte() were not able to detect read error)

  - Withdraw sigscheme-stdint.h. Use scmint.h instead

* Fixes

  [R5RS] and [SRFI-n] tags indicate specification conformance fixes.

  - Fix crashes by broken va_list passing of format.c on x86_64 platform

  - Fix potential SEGV on long string parsing

  - Fix possible crash on parsing R5RS-reserved chars |[]{}

  - Fix broken GC on systems that have 8-byte aligned malloc(3) such as Cygwin

  - Fix broken 64-bit data model capability of storage-compact

  - Fix broken out of range error detection of string->number which fails every
    conversion once after the error has occurred

  - Fix possible crash on parsing script prelude longer than 64 chars

  - Fix possible crash on parsing script prelude that only has
    "#! /usr/bin/env"

  - Fix a broken error handling on character encoding switching when
    !SCM_USE_MULTIBYTE_CHAR

  - Fix infinite loop on raising error objects that contain circular list when
    SCM_USE_HYGIENIC_MACRO

  - Fix broken ScmBaseCharPort inheritance of ScmSingleByteCharPort
    which may cause SEGV

  - Add lacking or incomplete error handlings for port operations

  - [R5RS] Fix invalid acceptance of definition form on where neither toplevel
    nor internal definition is allowed

  - [R5RS] Fix invalid acceptance of 'begin' that contains definitions and
    expressions intermixed

  - [R5RS] Fix invalid acceptance of <body> that contains definitions and
    expressions intermixed on 'let', 'let*', 'letrec' and function form
    'define'

  - [R5RS] Fix syntactic keyword to value evaluation that only bound to syntax
    or macro (i.e. (eq? if and) has been invalidated). But binding syntactic
    keywords to first-class objects such as (define else 3) and (define do 4)
    are still allowed
