@@ -73,6 +73,7 @@ typedef struct ScmCell_ ScmCell;
 typedef ScmCell *ScmObj;
 typedef ScmObj *ScmRef;
 
+#define ALIGNOF_SCMOBJ ALIGNOF_VOID_P
 #define SIZEOF_SCMOBJ SIZEOF_VOID_P
 
 typedef ScmObj (*ScmFuncType)();
